--- a/webpack-demo/src/index.html
+++ b/webpack-demo/src/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/a36c13d2c3.js" crossorigin="anonymous"></script>
     <title>Wbpack Exercise</title>
 </head>
+
 <body>
-    <h1>Hello webpack! hello 123</h1>
+    <section class="container">
+        <h1>Today's to do</h1>
+        <div class="list">
+            <input class="add-input" type="text" name="" id="" placeholder="Add your list...">
+            <ul id="wholeList">
+            </ul>
+            <div>
+                <button> Clear all completed </button>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
