--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
     <section class="container">
         <h1>Today's to do</h1>
         <div class="list">
-            <input class="add-input" type="text" placeholder="Add your list...">
+            <input class="add-input" id="addtodo" type="text" placeholder="Add your list...">
             <ul id="wholeList">
             </ul>
             <div>
-                <button type="button"> Clear all completed </button>
+                <button type="button" class="clearallbutton" > Clear all completed </button>
             </div>
         </div>
     </section>
