--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,14 @@
     <section class="container">
         <h1>Today's to do</h1>
         <div class="list">
+        <div class="top" >
             <input class="add-input" id="addtodo" type="text" placeholder="Add your list...">
+            <button type="button" id="reloadbtn"> <i class="fa fa-refresh"></i> </button>
+        </div>
             <ul id="wholeList">
             </ul>
             <div>
-                <button type="button" class="clearallbutton" > Clear all completed </button>
+                <button type="button" class="clearallbutton" id="clearallbutton" > Clear all completed </button>
             </div>
         </div>
     </section>
